# expense-tracker-api

./: Cargo.toml
migrations/: 0001_user_table.sql
src/: main.rs
src/handlers/: auth.rs  expenses.rs  mod.rs
src/middleware/: auth.rs
src/models/: expense.rs  user.rs
src/routes/: auth.rs  expenses.rs
src/utils/: jwt.rs
