[package]
name = "expense-tracker-api"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = {version = "1", features = ["full"]}
actix-web = "4"
serde = { version = "1.0.196", features = ["derive"]}
serde_json =  "1.0.113"
jsonwebtoken = "9.2.0"
once_cell = "1.19.0"
chrono = { version = "0.4.34", features = ["serde", "clock"] }
uuid = {version = "1", features = ["v4", "serde"]}
sqlx = {version = "0.6", features = ["postgres", "runtime-tokio-rustls", "uuid", "chrono"]}